Fixed minor grid layout bugs and set the banner and tagline image for the Payrange Page.

--- a/css/app.css
+++ b/css/app.css
@@ -371,7 +371,7 @@ header h6 {
 
 .todays_snack{
     text-align: center;
-    color: white;
+    color: #006480;
 ;
     padding-top: 30px;
 }
@@ -387,7 +387,7 @@ header h6 {
 
 .promotion_description {
     text-align: center;
-    color: orange;
+    color: #006480;
     padding-top: 30px;
 }
 
@@ -395,7 +395,7 @@ header h6 {
 .payrange_ad_container {
     background-image: url(../images/payrange_ad_image.jpg);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     opacity: .80;
 
 }
@@ -406,6 +406,12 @@ header h6 {
     padding-top: 30px;
     padding-bottom: 20px;
 }
+
+.payrange_button_snack {
+    background-color: darkgreen;
+    text-align: center;
+}
+
 
 .snack_app_container {
     background-image: url(../images/snack_background.jpg);
@@ -456,14 +462,16 @@ header h6 {
 }
 
 .icon_container {
-    padding: 0;
-    margin: auto;
+    padding-bottom: 200px;
 }
 
 .icon_container li {
     display: block;
 }
 
+.icon_container img {
+    padding: 0;
+}
 
 /* Begining designs for the Contact page */
 
@@ -518,6 +526,7 @@ header h6 {
 
 .contact_info_container {
     background-color: rgba(250,235,215,0.6);
+    margin-left: 20px;
 }
 
 .contact_image {
@@ -548,3 +557,13 @@ header h6 {
     text-align: center;
     font-size: 20px;
 }
+
+/*Beginning of Payrange Page*/
+
+.banner_payrange {
+    background-image: url(../images/payrange_banner_image.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
